📦 依赖升级 - 依赖`minio`升级至 8.5.8
💥 破坏性变更
- 最低运行 JDK 版本定为 17
- 版权原因，`Spring Boot`不再支持`javax.`命名空间下的类，全部需要替换为`jakarta.`命名空间
  > `javax.validation.`👉`jakarta.validation.`
  > `javax.annotation.`👉`jakarta.annotation.`
  > `javax.servlet.`👉`jakarta.servlet.`
- 所有`SpringFox`注解（如：`@Api`、`@ApiOperation`、`@ApiModelProperty`）替换为`SpringDoc`注解（如：`@Tag`、`@Operation`、`@Schema`）
  > 见：[从SpringFox迁移至SpringDoc](/i18n/zh-CN/appendix/springfox-to-springdoc.md)
- 所有`pom.xml`中，`spring-boot-maven-plugin`插件的`configuration`节删除
- 【COMMON.yml】中，`spring.mvc.pathmatch.matching-strategy`配置节删除``
- 【REDIS.yml】中，`spring.data.redis`配置节👉`spring.redis`配置节``
- 【sys-service】单元测试类仅保留`ExampleUnitTest`
- 【admin-api】移除内置后台管理中，旧的驼峰式API路由

💎 功能优化
- 【app-api.yml】中，`helio.security.exclude-routes`配置节中移除`/v2/api-docs`路由（不会再用到了）；增加`/error`路由（这样404时能正确外显消息）
- 【knife4j-aggregation.yml】中，`location`改为`/v3/api-docs`，从该路由得到`SpringDoc`文档
- 【knife4j-aggregation.yml】中，改变路由匹配策略：
  > ```
  > spring:
  >   mvc:
  >     pathmatch:
  >       # Spring Boot 2.6 后，默认的路由匹配策略为 PathPatternParser，Swagger2 不兼容，改回老策略 AntPathMatcher
  >       matching-strategy: ant_path_matcher
  > ```
- 【DUBBO.yml】中，降低类检查机制级别为`WARN`